--- a/Labs/Lab_2/Zad_10_1pkt_Header_and_form/style.css
+++ b/Labs/Lab_2/Zad_10_1pkt_Header_and_form/style.css
@@ -66,13 +66,13 @@ button:active {
     position: absolute;
     top: 10%;
     left: 55%;
-    width: 40%;
+    width: 30%;
     height: 4vw;
     float: right;
     background-color: #ffffff;
-    border-radius: 4px;
+    border-radius: 10px;
     box-shadow: 3px 3px black;
-    height: 40vw;
+    height: 28vw;
     max-height: 400px;
     max-width: 400px;
 }
@@ -81,6 +81,7 @@ button:active {
     font-size: 2vw;
     text-align: left;
     margin-left: 10%;
+    margin-bottom: 3vw;
     overflow-wrap: break-word;
 }
 
@@ -107,9 +108,10 @@ button:active {
 .fields button {
     position: relative;
     text-align: center;
+    align-items: center;
     background-color: #037bed;
-    margin-top: 10%;
-    width: 35%;
-    height: 18%;
+    margin-top: 15%;
+    width: 30%;
+    height: 15%;
     border-radius: 10px;
 }
