--- a/Labs/Lab_2/Zad_3_Obowiązkowe/style.css
+++ b/Labs/Lab_2/Zad_3_Obowiązkowe/style.css
@@ -2,18 +2,26 @@ html,
 body {
     width: 100%;
     margin: 0;
+    background-color: burlywood;
 }
 
 .card {
     display: inline-block;
     width: 300px;
     margin-right: 10px;
+    background-color: rgb(219, 126, 4);
+    margin-bottom: 2%;
+    border-radius: 2%;
 }
 
 img {
-    max-width: 100%;
+    position: relative;
+    max-width: 97%;
     max-height: 100%;
-    border-radius: 20px;
+    margin-right: 3%;
+    margin-left: 1.5%;
+    margin-top: 1%;
+    border-radius: 5px;
 }
 
 .text {
@@ -23,6 +31,11 @@ img {
 h1,
 h2 {
     margin: 2%;
+    font-size: 3vh;
+}
+
+h2 {
+    font-size: 2.5vh;
 }
 
 p {
@@ -31,17 +44,22 @@ p {
 }
 
 .read_button {
+    cursor: pointer;
     float: left;
     padding: 0;
     background-color: red;
     border: 0;
     height: 40px;
+    margin-left: 2%;
+    margin-bottom: 2%;
+    border-radius: 15%;
 }
 
 .comment {
     background-color: beige;
     position: relative;
     float: right;
+    margin-right: 5%;
 }
 
 
