--- a/Labs/Lab_2/Zad_9_2pkt_Card_Y_Rotation/style.css
+++ b/Labs/Lab_2/Zad_9_2pkt_Card_Y_Rotation/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap');
 html,
 body {
     width: 100%;
@@ -13,10 +14,12 @@ body {
     display: inline-block;
     background-color: transparent;
     width: 37%;
-    height: 80%;
+    height: 60vh;
+    min-height: 60vw;
     perspective: 1000px;
     text-align: center;
     margin-right: 2%;
+    box-shadow: 10px 10px 5px grey;
 }
 
 .card_inner {
@@ -55,17 +58,19 @@ body {
     background-color: #ff6e0d;
     color: white;
     transform: rotateY(180deg);
-    ;
 }
 
 .main {
     width: 100%;
-    height: 100%;
+    text-align: center;
 }
 
 .main p {
+    color: rgb(66, 59, 59);
+    width: 100%;
     margin-top: 0;
     font-size: 3vw;
+    border-bottom: 0.5px solid rgba(104, 101, 101, 0.205);
 }
 
 .img_with_cityname {
@@ -93,36 +98,47 @@ body {
 /* Back card text positioning and design */
 
 .container_back {
+    margin: 0;
+    font-family: 'Xanh Mono', monospace;
     position: relative;
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 
 .container_back .first {
-    position: absolute;
-    margin: 0;
-    margin-left: 20%;
-    margin-top: 10%;
-    font-size: 6vw;
+    position: relative;
+    margin-top: 30%;
+    font-size: 4vw;
+    margin-bottom: 0;
 }
 
 .container_back .price {
-    position: absolute;
+    position: relative;
     margin: 0;
-    margin-left: 10%;
-    margin-top: 35%;
-    font-size: 10vw;
+    margin-top: 5%;
+    font-size: 12vw;
+}
+
+.container_back .button {
+    position: relative;
+    margin-top: 15%;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 10vh;
+    align-self: center;
+    background-color: aliceblue;
+    text-align: center;
+    border-radius: 45%;
 }
 
 .container_back .reserve {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-decoration: none;
     color: black;
-    cursor: pointer;
-    background-color: red;
-    border-radius: 20%;
-    margin: 0;
-    margin-left: -35%;
-    margin-top: 80%;
-    font-size: 5vw;
+    font-size: 3vh;
 }
