--- a/Labs/Lab_2/Zad_11_9pkt_Portfolio_CSS_HTML/css/mainStyle.css
+++ b/Labs/Lab_2/Zad_11_9pkt_Portfolio_CSS_HTML/css/mainStyle.css
@@ -12,6 +12,7 @@ body {
     background: rgb(185, 177, 177);
     background: linear-gradient(90deg, rgba(185, 177, 177, 1) 0%, rgba(180, 126, 126, 1) 100%);
     font-family: 'Yeseva One', cursive;
+    scroll-behavior: smooth;
 }
 
 li,
@@ -129,10 +130,11 @@ nav:hover~.back_to_top_arrow,
 }
 
 .back_to_top_arrow p {
+    color: azure;
     margin: 0;
     padding-right: 3.6vw;
     opacity: 0.7;
-    background-color: red;
+    background-color: rgb(124, 44, 44);
     border-radius: 20px;
     font-size: 6vw;
 }
