Added Form to add Trips, Refactored Components communication

--- a/Labs/TripsApp/src/app/app.component.html
+++ b/Labs/TripsApp/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-single-trip>
+<app-selected-trips-list>
 
-</app-single-trip>
+</app-selected-trips-list>
+<app-form-trip>
+
+</app-form-trip>
+<app-list-of-trips>
+</app-list-of-trips>
