--- a/Labs/TripsApp/src/app/list-of-trips/list-of-trips.component.html
+++ b/Labs/TripsApp/src/app/list-of-trips/list-of-trips.component.html
@@ -1,1 +1,10 @@
-<p>list-of-trips works!</p>
+<div class="container m-0">
+  <div class="row ">
+
+    <app-single-trip *ngFor="let item of items; let i = index;" [singleTrip]="item"
+                     class="card col-12 col-xs-6 col-sm-5 col-md-4 p-0 m-0" >
+
+    </app-single-trip>
+  </div>
+</div>
+
