--- a/Labs/TripsApp/src/app/single-trip/single-trip.component.html
+++ b/Labs/TripsApp/src/app/single-trip/single-trip.component.html
@@ -1,45 +1,46 @@
-<div class="container m-0">
-  <div class="row ">
+<!--Single card style-->
+<div
 
-    <!--Current card style-->
-    <div class="card col-12 col-xs-6 col-sm-5 col-md-4 p-0 m-1" style="background-color: antiquewhite">
-
-      <div class="card_head">
-        s <h3 class="card_name"></h3>
-        <!--  TODO   Component representing stars RATING fitted and floated right -->
-      </div>
-      <div class="card_main ">
-        <div class="img_and_description ">
-          <img src="assets/logo.gif" alt="" class=" rounded-circle " width="40%">
-          <div class="card_description float-right" style="width: 50%">
-            <div class="card_destination">
-              <h4>Destination</h4>
-              <p>Is MINSK</p>
-            </div>
-          </div>
-        </div>
-        <div class="card_places">
-          <p>Places: 1/3</p>
-        </div>
-      </div>
-      <div class="card_footer m-0 w-100" style="background-color: beige">
-
-        <h4 class="card_price m-0 d-inline-block" style="width: 40%">100$</h4>
-
-        <div class="card_buttons float-right  " style="width: 60%">
-          <div *ngIf="isAddedAny" class="icon w-25 d-inline-block m-1 float-right" (click)="deleteClicked($event)">
-            <img src="assets/delete_icon.png" alt="" width="100%" style="cursor: pointer">
-          </div>
-          <div class="icon w-25 d-inline-block m-1 float-right" (click)="addClicked($event)">
-            <img src="assets/add_icon.png" alt="" width="100%" style="cursor: pointer">
-          </div>
-          <div class="icon w-25 d-inline-block m-1 float-right" (click)="deleteTripClicked($event)">
-            <img src="assets/trash_icon.webp" alt="" width="100%" style="cursor: pointer">
-          </div>
+  [ngStyle]="{'background-color': (singleTrip.max_places - singleTrip.selected_places < 3) ? 'darkgoldenrod' : 'antiquewhite',
+     'color': (singleTrip.max_places - singleTrip.selected_places < 3) ? 'white' : 'black'}">
+  <div class="card_head">
+    <h3 class="card_name">{{singleTrip.name | uppercase}}</h3>
+    <!--  TODO   Component representing stars RATING fitted and floated right -->
+  </div>
+  <div class="card_main ">
+    <div class="img_and_description ">
+      <img [src]="singleTrip.link_img" alt="" class=" rounded-circle " width="40%">
+      <div class="card_description float-right" style="width: 50%">
+        <div class="card_destination">
+          <h5>Destination:</h5>
+          <p>{{singleTrip.country | titlecase }}</p>
+          <h6>Date</h6>
+          <p>{{singleTrip.data_start}}</p>
+          <p>{{singleTrip.data_end}}</p>
         </div>
       </div>
     </div>
-
+    <div class="card_places m-3" *ngIf="singleTrip.selected_places < singleTrip.max_places">
+      <p>Places: {{singleTrip.max_places - singleTrip.selected_places}}/{{singleTrip.max_places}}</p>
+    </div>
+    <div class="no_more_places m-3" *ngIf="singleTrip.selected_places== singleTrip.max_places">
+      <p style="color: #ff0000"> No places left</p>
+    </div>
   </div>
+  <div class="card_footer m-0 w-100">
 
+    <h4 class="card_price m-0 d-inline-block center-block" style="width: 40%">{{singleTrip.price | currency:'USD':'$'}}</h4>
+
+    <div class="card_buttons float-right  " style="width: 60%">
+      <div *ngIf="isAddedAny" class="icon w-25 d-inline-block m-1 float-right" (click)="deleteClicked($event)">
+        <img src="../../assets/minus_icon.png" alt="" width="100%" style="cursor: pointer">
+      </div>
+      <div *ngIf="isNotFull" class="icon w-25 d-inline-block m-1 float-right" (click)="addClicked($event)">
+        <img src="../../assets/add_icon.png" alt="" width="100%" style="cursor: pointer">
+      </div>
+      <div class="icon w-25 d-inline-block m-1 float-right" (click)="deleteTripClicked($event)">
+        <img src="../../assets/trash_icon.webp" alt="" width="100%" style="cursor: pointer">
+      </div>
+    </div>
+  </div>
 </div>
