Added layout as in labs, Changed code structure

--- a/Labs/TripsApp/src/app/app.component.html
+++ b/Labs/TripsApp/src/app/app.component.html
@@ -1,8 +1,12 @@
-<app-selected-trips-list>
 
-</app-selected-trips-list>
-<app-form-trip>
+
+
+<app-form-trip class="w-50 d-inline-block">
 
 </app-form-trip>
+<app-selected-trips-list class="w-50 d-inline-block float-right" style="margin-top: 1%">
+
+</app-selected-trips-list>
+
 <app-list-of-trips>
 </app-list-of-trips>
