--- a/Labs/TripsApp/src/app/trips-menu/list-of-trips/list-of-trips.component.html
+++ b/Labs/TripsApp/src/app/trips-menu/list-of-trips/list-of-trips.component.html
@@ -2,7 +2,7 @@
   <div class="row ">
 
     <app-single-trip *ngFor="let item of items; let i = index;" [singleTrip]="item"
-                     class="card col-12 col-xs-6 col-sm-5 col-md-4 p-0 m-0" >
+                     class="card col-12 col-xs-6 col-sm-5 col-md-4  p-0 m-0 p-2 border-0" >
 
     </app-single-trip>
   </div>
