--- a/Labs/TripsApp/src/app/form-trip/form-trip.component.html
+++ b/Labs/TripsApp/src/app/form-trip/form-trip.component.html
@@ -12,7 +12,7 @@
         <div *ngIf="name_of_trip.errors && (name_of_trip.dirty || name_of_trip.touched)"
              class="alert-danger alert"
         >
-          Name is required
+          Name is required and should be longer than 3 characters
         </div>
       </div>
       <div class="form-group">
@@ -23,7 +23,7 @@
         <div *ngIf="country.errors && (country.dirty || country.touched)"
              class="alert-danger alert"
         >
-          Country is required
+          Country is required and should be longer than 3 characters
         </div>
       </div>
 
@@ -35,7 +35,7 @@
         <div *ngIf="data_start.errors && (data_start.dirty || data_start.touched)"
              class="alert-danger alert"
         >
-          data_start is required
+          Date of start is required and should be in the future
         </div>
       </div>
 
@@ -43,6 +43,7 @@
         <label for="name">Date Ending</label>
         <input type="date" class="form-control" id="data_end"
                required
+
                formControlName="data_end">
         <div *ngIf="data_end.errors && (data_end.dirty || data_end.touched)"
              class="alert-danger alert"
@@ -72,6 +73,16 @@
              class="alert-danger alert"
         >
           max_places is required
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="name">Short Description</label>
+        <input type="text" class="form-control" id="description"
+               formControlName="description">
+        <div *ngIf="description.errors && (description.dirty || description.touched)"
+             class="alert-danger alert"
+        >
+          Description can't be longer than 30 characters
         </div>
       </div>
       <button type="submit" class="btn btn-success m-1" [disabled]="!myForm.valid" (click)="addNewTrip()">Submit
