Added Lab 4 TripsApp

--- a/Labs/TripsApp/src/app/app.component.html
+++ b/Labs/TripsApp/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-form-trip class="col-md-6 col-12 d-inline-block" (tripAdded)="addToListOfTrips($event)">
-
 </app-form-trip>
-<app-selected-trips-list class="col-12 col-md-6 d-inline-block float-right" style="margin-top: 1%">
 
+<app-selected-trips-list class="col-12 col-md-6 d-inline-block float-md-right" style="margin-top: 1%;">
 </app-selected-trips-list>
 
 <app-list-of-trips>
