--- a/Labs/TripsApp/src/app/form-trip/form-trip.component.html
+++ b/Labs/TripsApp/src/app/form-trip/form-trip.component.html
@@ -48,7 +48,7 @@
         <div *ngIf="data_end.errors && (data_end.dirty || data_end.touched)"
              class="alert-danger alert"
         >
-          data_end is required
+          Date end is required and should start in the future
         </div>
       </div>
 
@@ -72,7 +72,7 @@
         <div *ngIf="max_places.errors && (max_places.dirty || max_places.touched)"
              class="alert-danger alert"
         >
-          max_places is required
+          Max Places is required
         </div>
       </div>
       <div class="form-group">
