--- a/Labs/TripsApp/src/app/selected-trips/selected-trips-list/selected-trips-list.component.html
+++ b/Labs/TripsApp/src/app/selected-trips/selected-trips-list/selected-trips-list.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: beige">
+<div style="background-color: beige;">
   <h3 class="text-center" style="background-color: beige">List of selected trips: </h3>
   <div *ngFor="let item of tripsList.trips;" class="col-sm-12">
     <app-selected-single-trip *ngIf="item.selected_places>0" [itemSelected]=item>
