Added Trip Details Component, Changed Communication Logic

--- a/Labs/TripsApp/src/app/components/trips-menu/filter-trips/filter-trips.component.html
+++ b/Labs/TripsApp/src/app/components/trips-menu/filter-trips/filter-trips.component.html
@@ -27,6 +27,6 @@
     <label class="d-block" for="rating">Rating:</label>
     <input [(ngModel)]="filterModel.rating" id="rating" placeholder="Rating more than" type="number">
   </div>
-  <button (click)="submitFilter()" class="btn btn-success m-1 d-inline-block" type="submit">Submit</button>
+  <button (click)="submitFilter()" class="btn btn-success m-1 d-inline-block" type="submit">Filter</button>
   <button (click)="resetFilter()" class="btn btn-success m-1 d-inline-block" type="submit">Reset</button>
 </div>
