Cleaned up code

--- a/Labs/Lab_5_Firebase/Zad3HttpClient/src/app/components/posts/add-post/add-new-post.component.html
+++ b/Labs/Lab_5_Firebase/Zad3HttpClient/src/app/components/posts/add-post/add-new-post.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h1>Add new Comment</h1>
+    <h1>Add new Post</h1>
     <form [formGroup]="myForm"
           novalidate
     >
