--- a/Labs/TripsApp/src/app/components/add-trip/add-trip.component.html
+++ b/Labs/TripsApp/src/app/components/add-trip/add-trip.component.html
@@ -90,7 +90,7 @@
           Description can't be longer than 300 characters
         </div>
       </div>
-      <button (click)="addNewTrip()" [disabled]="!myForm.valid" class="btn btn-success m-1" type="submit">Submit
+      <button (click)="addNewTrip()" [disabled]="!myForm.valid" class="btn btn-success m-1" type="submit">Add
       </button>
     </form>
   </div>
