--- a/Labs/TripsApp/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Labs/TripsApp/src/app/components/navigation-bar/navigation-bar.component.html
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="add">Add Trip</a>
       </li>
+      <li class="nav-item" *ngIf="auth.authState$">
+        <a class="nav-link" routerLink="signIn"(click)="auth.logOut()">Log Out</a>
+      </li>
     </ul>
   </div>
 </nav>
