Added roles differentiantion UI

--- a/Labs/TripsApp/src/app/components/authentication/register/register.component.html
+++ b/Labs/TripsApp/src/app/components/authentication/register/register.component.html
@@ -15,7 +15,7 @@
       </mat-form-field>
 
 
-      <button (click)="authService.SignUp(email.value,password.value)" class="btn-block" color="accent"
+      <button (click)="authService.signUp(email.value,password.value)" class="btn-block" color="accent"
               mat-stroked-button>Register
       </button>
       <mat-button-toggle class="btn-block mt-4" color="primary" mat-stroked-button routerLink="/signIn">
