--- a/Labs/TripsApp/src/app/components/authentication/sign-in/sign-in.component.html
+++ b/Labs/TripsApp/src/app/components/authentication/sign-in/sign-in.component.html
@@ -15,7 +15,7 @@
           <input #password matInput placeholder="Password" required type="password">
         </mat-form-field>
       </mat-card-content>
-      <button (click)="auth.SignIn(mail.value,password.value)" class="btn-block" color="accent" mat-stroked-button>
+      <button (click)="auth.signIn(mail.value,password.value)" class="btn-block" color="accent" mat-stroked-button>
         Sign-in
       </button>
 
