--- a/Labs/TripsApp/src/app/components/modify-trip/modify-trip.component.html
+++ b/Labs/TripsApp/src/app/components/modify-trip/modify-trip.component.html
@@ -1,3 +1,12 @@
+<form class="example-form">
+  <mat-form-field class="example-full-width" *ngFor="let par in singleTrip">
+    <mat-label>Trip name</mat-label>
+    <input  matInput placeholder="{{par}}" [(ngModel)]="singleTrip[par]">
+  </mat-form-field>
+</form>
+
+
+
 <div style="background-color:antiquewhite">
   <h1 class="text-center">{{singleTrip.name }}</h1>
   <h2 class="text-center"><p style="text-decoration: underline; display: inline-block">Destination
@@ -21,27 +30,4 @@
   <!--  Price-->
   <h2 class="text-center"><p style="text-decoration: underline; display: inline-block">Price:</p> {{singleTrip.price}} $
   </h2>
-  <!--  Rating-->
-  <div style="width: 100%">
-    <app-rating-trips (ratingSelected)="setRating($event)"
-                      [selectedRating]="singleTrip.rating"
-                      style="display:block; margin-left: auto; margin-right: auto; width: fit-content">
-    </app-rating-trips>
-  </div>
-  <!--  Buttons-->
-  <div class="card_buttons text-center" style="width: 100%; height: 20vw; padding-top: 1%; padding-bottom: 25%">
-
-    <div (click)="deleteTripClicked()" *ngIf="roleAccess.userAccessModel['delete_trip']"
-         class="d-inline-block m-1 ">
-      <img alt="" src="../../../assets/trash_icon.webp" style="cursor: pointer" width="75vw">
-    </div>
-    <div (click)="increaseTripsTakenCounter()" *ngIf="showIncreaseButton"
-         class=" d-inline-block m-1 ">
-      <img alt="" src="../../../assets/add_icon.png" style="cursor: pointer" width="75vw">
-    </div>
-    <div (click)="decreaseTripsTakenCounter()" *ngIf="showDecreaseButton"
-         class="d-inline-block m-1 ">
-      <img alt="" src="../../../assets/minus_icon.png" style="cursor: pointer" width="75vw">
-    </div>
-  </div>
 </div>
