--- a/Labs/TripsApp/src/app/components/admin-panel/admin-panel.component.html
+++ b/Labs/TripsApp/src/app/components/admin-panel/admin-panel.component.html
@@ -1,11 +1,11 @@
 <h1 class="text-center">Welcome in Admin Panel!</h1>
 <mat-card>
   <mat-label class="text-center"><h1>Persistence</h1></mat-label>
-  <h4>Current Persistence is: {{authService.persistence}}</h4>
+  <h4>Current Persistence is: <b>{{authService.persistence}}</b></h4>
   <h5>Change it:</h5>
   <mat-form-field appearance="fill">
     <mat-label>Session type</mat-label>
-    <mat-select [(value)]="authService.persistence" (valueChange)="authService.setPersistence()">
+    <mat-select (valueChange)="authService.setPersistence()" [(value)]="authService.persistence">
       <mat-option *ngFor="let val of values" [value]="val">
         {{val}}
       </mat-option>
@@ -13,3 +13,7 @@
   </mat-form-field>
 </mat-card>
 
+<mat-card>
+  <mat-label class="text-center"><h1>More functions</h1></mat-label>
+  <h4>....</h4>
+</mat-card>
