--- a/Labs/TripsApp/src/app/components/authentication/register/register.component.html
+++ b/Labs/TripsApp/src/app/components/authentication/register/register.component.html
@@ -7,11 +7,11 @@
     <form class="example-form">
 
       <mat-form-field class="example-full-width">
-        <input #email matInput placeholder="Email">
+        <input #email matInput placeholder="Email" required>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input #password matInput placeholder="Password">
+        <input #password matInput placeholder="Password" required type="password">
       </mat-form-field>
 
 
