--- a/Labs/TripsApp/src/app/components/trips-menu/single-trip/single-trip.component.html
+++ b/Labs/TripsApp/src/app/components/trips-menu/single-trip/single-trip.component.html
@@ -1,13 +1,13 @@
 <!--Single card style-->
 <div *ngIf="((singleTrip.max_places - singleTrip.selected_places>0) || roleAccess.userAccessModel['read_unavailable'])"
 
-  [ngStyle]="{
+     [ngStyle]="{
   'background-color': (singleTrip.max_places - singleTrip.selected_places < 3) ? 'darkgoldenrod' : 'antiquewhite',
    'color': (singleTrip.max_places - singleTrip.selected_places < 3) ? 'white' : 'black'
       }
 
 "
-  style="padding-left: 5%; border-radius: 5%">
+     style="padding-left: 5%; border-radius: 5%">
   <div class="card_head">
     <h3 class="card_name text-center">{{singleTrip.name | uppercase}}</h3>
   </div>
@@ -57,13 +57,17 @@
            class="icon  d-inline-block m-1 float-right" style="width: 20%">
         <img alt="" src="../../../../assets/add_icon.png" style="cursor: pointer" width="100%">
       </div>
-      <div (click)="deleteTripClicked()" *ngIf="roleAccess.userAccessModel['delete_trip']"
-           class="icon d-inline-block m-1 float-right" style="width: 20%">
-        <img alt="" src="../../../../assets/trash_icon.webp" style="cursor: pointer" width="100%">
-      </div>
+      <!--      <div (click)="deleteTripClicked()" *ngIf="roleAccess.userAccessModel['delete_trip']"-->
+      <!--           class="icon d-inline-block m-1 float-right" style="width: 20%">-->
+      <!--        <img alt="" src="../../../../assets/trash_icon.webp" style="cursor: pointer" width="100%">-->
+      <!--      </div>-->
       <div (click)="goToTripDetails()"
            class="icon  d-inline-block m-1 float-right" style="width: 20%">
         <img alt="" src="../../../../assets/details.png" style="cursor: pointer" width="100%">
+      </div>
+      <div (click)="goToEdition()" *ngIf="roleAccess.userAccessModel['modify_trip']"
+           class="icon  d-inline-block m-1 float-right" style="width: 20%">
+        <img alt="" src="../../../../assets/edit.png" style="cursor: pointer" width="100%">
       </div>
     </div>
   </div>
